Added import np and plt

--- a/1 - Run model.ipynb
+++ b/1 - Run model.ipynb
@@ -23,6 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib\n",
+    "from matplotlib import pyplot as plt\n",
     "import theano\n",
     "theano.config.mode = 'FAST_RUN'\n",
     "theano.config.optimizer = 'fast_compile'"
